--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             --grid-color: rgba(255, 255, 255, 0.2);
             --team-a-color: #d32f2f;
             --team-b-color: #1976d2;
+            --team-a-contrast: #fff;
+            --team-b-contrast: #fff;
+            --team-a-contrast-rgb: 255, 255, 255;
+            --team-b-contrast-rgb: 255, 255, 255;
+            --token-size: 7%;
             --sidebar-width: 300px;
             --ad-sidebar-width: 300px;
             --mobile-ad-height: 60px;
@@ -123,18 +128,20 @@
         #label-team-b { bottom: 20%; transform: translateY(50%); }
 
         .player-token { 
-            width: 12%; aspect-ratio: 1; 
+            width: var(--token-size); aspect-ratio: 1; 
             position: absolute; 
             display: flex; flex-direction: column; align-items: center; justify-content: center; 
             cursor: grab; z-index: 100; user-select: none;
             touch-action: none !important; -webkit-user-select: none;
         }
         .jersey { width: 100%; height: 100%; border-radius: 50%; display: flex; justify-content: center; align-items: center; color: #fff; font-weight: bold; font-size: 1.2vw; box-shadow: 0 3px 5px rgba(0,0,0,0.4); border: 2px solid #fff; position: relative; }
-        .jersey::after { content: ''; position: absolute; inset: -3px; border-radius: 50%; border: 2px dashed rgba(255,255,255,0.3); }
+        .jersey::after { content: ''; position: absolute; inset: 0; border-radius: 50%; border: 2px dashed rgba(255,255,255,0.3); transform: scale(0.7); transform-origin: center; }
         .player-name-tag { background: rgba(0,0,0,0.8); color: #fff; padding: 2px 5px; border-radius: 3px; font-size: 0.7rem; margin-top: -5px; white-space: nowrap; z-index: 102; pointer-events: none;}
         
-        .team-a .jersey { background-color: var(--team-a-color); }
-        .team-b .jersey { background-color: var(--team-b-color); }
+        .team-a .jersey { background-color: var(--team-a-color); color: var(--team-a-contrast); border-color: var(--team-a-contrast); }
+        .team-b .jersey { background-color: var(--team-b-color); color: var(--team-b-contrast); border-color: var(--team-b-contrast); }
+        .team-a .jersey::after { border-color: rgba(var(--team-a-contrast-rgb), 0.35); }
+        .team-b .jersey::after { border-color: rgba(var(--team-b-contrast-rgb), 0.35); }
         .striped .jersey { background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255,255,255,0.3) 10px, rgba(255,255,255,0.3) 15px); }
 
         /* FOOTER */
@@ -288,7 +295,7 @@
         const pitchContainer = document.getElementById('pitch-container');
         const gridOverlay = document.getElementById('gridOverlay');
 
-        window.onload = () => { renderList(); setupInteract(); setupListeners(); updateLabels(); };
+        window.onload = () => { renderList(); setupInteract(); setupListeners(); updateStyles(); };
 
         // Mobil Sidebar Toggle
         function toggleSidebar() {
@@ -302,9 +309,34 @@
             document.getElementById('pitchStyle').addEventListener('change', changePitchStyle);
         }
 
+        function getContrastColor(hex) {
+            const cleaned = hex.replace('#', '');
+            const value = cleaned.length === 3
+                ? cleaned.split('').map(ch => ch + ch).join('')
+                : cleaned;
+            const r = parseInt(value.slice(0, 2), 16);
+            const g = parseInt(value.slice(2, 4), 16);
+            const b = parseInt(value.slice(4, 6), 16);
+            const yiq = (r * 299 + g * 587 + b * 114) / 1000;
+            const isLight = yiq >= 128;
+            return {
+                hex: isLight ? '#111111' : '#ffffff',
+                rgb: isLight ? [17, 17, 17] : [255, 255, 255]
+            };
+        }
+
         function updateStyles() {
-            document.documentElement.style.setProperty('--team-a-color', document.getElementById('colorA').value);
-            document.documentElement.style.setProperty('--team-b-color', document.getElementById('colorB').value);
+            const colorA = document.getElementById('colorA').value;
+            const colorB = document.getElementById('colorB').value;
+            const contrastA = getContrastColor(colorA);
+            const contrastB = getContrastColor(colorB);
+
+            document.documentElement.style.setProperty('--team-a-color', colorA);
+            document.documentElement.style.setProperty('--team-b-color', colorB);
+            document.documentElement.style.setProperty('--team-a-contrast', contrastA.hex);
+            document.documentElement.style.setProperty('--team-b-contrast', contrastB.hex);
+            document.documentElement.style.setProperty('--team-a-contrast-rgb', contrastA.rgb.join(', '));
+            document.documentElement.style.setProperty('--team-b-contrast-rgb', contrastB.rgb.join(', '));
             document.getElementById('label-team-a').innerText = document.getElementById('nameA').value;
             document.getElementById('label-team-b').innerText = document.getElementById('nameB').value;
             document.querySelectorAll('.team-a').forEach(el => el.classList.toggle('striped', document.getElementById('patternA').checked));
@@ -398,13 +430,30 @@
             const btn = document.querySelector('.btn-download');
             const originalText = btn.innerHTML;
             btn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Hazırlanıyor...';
-            
+
+            const tokenSizePercent = parseFloat(getComputedStyle(document.documentElement).getPropertyValue('--token-size')) / 100;
+            const tokenSizePx = pitchContainer.clientWidth * tokenSizePercent;
+            const tokenElements = Array.from(document.querySelectorAll('.player-token'));
+            const previousTokenStyles = tokenElements.map(el => ({
+                width: el.style.width,
+                height: el.style.height
+            }));
+            tokenElements.forEach(el => {
+                el.style.width = `${tokenSizePx}px`;
+                el.style.height = `${tokenSizePx}px`;
+            });
+
             html2canvas(pitchContainer, { scale: 3, backgroundColor:null }).then(canvas => {
                 const link = document.createElement('a');
                 link.download = `kadro_${Date.now()}.jpg`;
                 link.href = canvas.toDataURL('image/jpeg', 0.9);
                 link.click();
                 btn.innerHTML = originalText;
+            }).finally(() => {
+                tokenElements.forEach((el, index) => {
+                    el.style.width = previousTokenStyles[index].width;
+                    el.style.height = previousTokenStyles[index].height;
+                });
             });
         }
 
