--- a/index.html
+++ b/index.html
@@ -131,19 +131,63 @@
         .player-token { 
             width: var(--token-size-px); height: var(--token-size-px);
             position: absolute; 
-            display: flex; flex-direction: column; align-items: center; justify-content: center; 
+            display: flex; flex-direction: column; align-items: center; justify-content: flex-end; 
             cursor: grab; z-index: 100; user-select: none;
             touch-action: none !important; -webkit-user-select: none;
         }
-        .jersey { width: 100%; height: 100%; border-radius: 50%; display: flex; justify-content: center; align-items: center; color: #fff; font-weight: bold; font-size: 1.2vw; box-shadow: 0 3px 5px rgba(0,0,0,0.4); border: 2px solid #fff; position: relative; }
-        .jersey::after { content: ''; position: absolute; inset: 0; border-radius: 50%; border: 2px dashed rgba(255,255,255,0.3); transform: scale(0.7); transform-origin: center; }
-        .player-name-tag { background: rgba(0,0,0,0.8); color: #fff; padding: 2px 5px; border-radius: 3px; font-size: 0.7rem; margin-top: -5px; white-space: nowrap; z-index: 102; pointer-events: none;}
+        .jersey {
+            width: 85%;
+            height: 70%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #222;
+            font-weight: 700;
+            font-size: 0.75rem;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.45);
+            border: 2px solid rgba(0,0,0,0.15);
+            border-radius: 8px 8px 12px 12px;
+            position: relative;
+            background: linear-gradient(180deg, rgba(255,255,255,0.95), rgba(230,230,230,0.95));
+            clip-path: polygon(15% 0%, 35% 0%, 40% 12%, 60% 12%, 65% 0%, 85% 0%, 100% 25%, 88% 40%, 88% 100%, 12% 100%, 12% 40%, 0% 25%);
+        }
+        .jersey::before {
+            content: '';
+            position: absolute;
+            top: 6%;
+            left: 50%;
+            width: 18%;
+            height: 18%;
+            transform: translateX(-50%);
+            border-radius: 50%;
+            background: rgba(255,255,255,0.9);
+            box-shadow: inset 0 0 0 2px rgba(0,0,0,0.15);
+        }
+        .player-name-tag {
+            background: #0b6623;
+            color: #ffe066;
+            padding: 2px 6px;
+            border-radius: 3px;
+            font-size: 0.7rem;
+            margin-top: 4px;
+            white-space: nowrap;
+            z-index: 102;
+            pointer-events: none;
+            text-shadow: 0 1px 0 rgba(0,0,0,0.6);
+            box-shadow: 0 2px 0 rgba(0,0,0,0.5);
+        }
         
-        .team-a .jersey { background-color: var(--team-a-color); color: var(--team-a-contrast); border-color: var(--team-a-contrast); }
-        .team-b .jersey { background-color: var(--team-b-color); color: var(--team-b-contrast); border-color: var(--team-b-contrast); }
-        .team-a .jersey::after { border-color: rgba(var(--team-a-contrast-rgb), 0.35); }
-        .team-b .jersey::after { border-color: rgba(var(--team-b-contrast-rgb), 0.35); }
-        .striped .jersey { background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255,255,255,0.3) 10px, rgba(255,255,255,0.3) 15px); }
+        .team-a .jersey {
+            background: linear-gradient(180deg, var(--team-a-color), rgba(255,255,255,0.35));
+            color: var(--team-a-contrast);
+        }
+        .team-b .jersey {
+            background: linear-gradient(180deg, var(--team-b-color), rgba(255,255,255,0.35));
+            color: var(--team-b-contrast);
+        }
+        .striped .jersey {
+            background-image: repeating-linear-gradient(45deg, rgba(255,255,255,0.25), rgba(255,255,255,0.25) 8px, rgba(0,0,0,0.08) 8px, rgba(0,0,0,0.08) 14px);
+        }
 
         /* FOOTER */
         .bottom-actions { background: #fff; padding: 15px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.2); text-align: center; width: 100%; box-sizing: border-box; }
