Add Google Ads script to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:description" content="Halı saha kadronuzu hızlıca oluşturun, oyuncuları sahaya sürükleyin ve görseli kaydedin.">
     <meta name="author" content="Gökhan Kuru">
     <title>Kadrohazirla.com | Halı Saha Kadro Oluşturucu</title>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8249799356652453" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/interact.js/1.10.11/interact.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
