--- a/index.html
+++ b/index.html
@@ -261,6 +261,26 @@
         .footer-info { font-size: 0.8rem; color: #666; line-height: 1.6; }
         .footer-info a { color: #333; text-decoration: underline; cursor: pointer; margin: 0 5px; }
 
+        .content-section {
+            background: #fff;
+            padding: 16px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+            width: 100%;
+            box-sizing: border-box;
+            color: #333;
+            line-height: 1.6;
+        }
+        .content-section h3 {
+            margin-top: 0;
+            color: #2e7d32;
+            font-size: 1.1rem;
+        }
+        .content-section ul {
+            padding-left: 18px;
+            margin: 8px 0 0;
+        }
+
         /* REKLAMLAR */
         #ad-sidebar-desktop { width: var(--ad-sidebar-width); background: #f0f2f5; border-left: 1px solid #ddd; display: none; align-items: center; justify-content: center; flex-shrink: 0; padding: 10px; }
         .ad-placeholder { width: 100%; height: 100%; background: #e0e0e0; display: flex; align-items: center; justify-content: center; color: #888; border: 1px dashed #aaa; text-align: center; }
@@ -380,6 +400,24 @@
                     </div>
                 </div>
             </div>
+
+            <div class="content-section">
+                <h3>Halı Saha Kadro Hazırlama Rehberi</h3>
+                <p>
+                    Kadrohazirla.com ile halı saha takımınızı hızlıca düzenleyebilir, oyuncuları sahaya yerleştirip
+                    görsel kadro paylaşımı yapabilirsiniz. Bu sayfa, takım organizasyonunu kolaylaştırmak için tasarlanmış
+                    ücretsiz bir araçtır ve tüm veriler tarayıcınızda saklanır.
+                </p>
+                <p>
+                    Kadro oluştururken oyuncu havuzuna isim ekleyin, pozisyon seçin ve A/B takımlarına sürükleyin.
+                    Saha çizgileri ve ızgara ile oyuncu yerleşimi daha düzenli görünür.
+                </p>
+                <ul>
+                    <li>Takım isimleri ve forma renklerini özelleştirin.</li>
+                    <li>Oyuncu pozisyonlarını saklayarak hızlı tekrar kullanım sağlayın.</li>
+                    <li>Oluşturduğunuz dizilişi JPG olarak kaydedip paylaşın.</li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -408,6 +446,7 @@
 
     <script>
         let players = JSON.parse(localStorage.getItem('players_v5')) || [];
+        let playerPositions = JSON.parse(localStorage.getItem('player_positions_v1')) || {};
         const positions = ["K", "STP", "BEK", "OS", "KN", "FV"];
         const pitchContainer = document.getElementById('pitch-container');
         const gridOverlay = document.getElementById('gridOverlay');
@@ -491,12 +530,18 @@
         function addPlayerToPool() {
             const name = document.getElementById('newPlayerName').value.trim();
             if(name && !players.includes(name)) {
-                players.push(name); localStorage.setItem('players_v5', JSON.stringify(players));
+                players.push(name);
+                if (!playerPositions[name]) {
+                    playerPositions[name] = positions[0];
+                }
+                localStorage.setItem('players_v5', JSON.stringify(players));
+                localStorage.setItem('player_positions_v1', JSON.stringify(playerPositions));
                 renderList(); document.getElementById('newPlayerName').value = '';
             }
         }
         function renderList() {
             const list = document.getElementById('player-list'); list.innerHTML = '';
+            let positionsUpdated = false;
             players.forEach((p, i) => {
                 const li = document.createElement('li'); li.className = 'pool-player';
                 li.innerHTML = `<span class="pool-player-name">${p}</span>
@@ -507,9 +552,30 @@
                         <button style="background:#999" onclick="del('${p}')"><i class="fas fa-trash"></i></button>
                     </div>`;
                 list.appendChild(li);
+                const select = li.querySelector(`#pos-${i}`);
+                if (!playerPositions[p]) {
+                    playerPositions[p] = positions[0];
+                    positionsUpdated = true;
+                }
+                select.value = playerPositions[p];
+                select.addEventListener('change', () => {
+                    playerPositions[p] = select.value;
+                    localStorage.setItem('player_positions_v1', JSON.stringify(playerPositions));
+                });
             });
+            if (positionsUpdated) {
+                localStorage.setItem('player_positions_v1', JSON.stringify(playerPositions));
+            }
         }
-        function del(name) { if(confirm('Silinsin mi?')) { players = players.filter(p=>p!==name); localStorage.setItem('players_v5', JSON.stringify(players)); renderList(); } }
+        function del(name) {
+            if(confirm('Silinsin mi?')) {
+                players = players.filter(p=>p!==name);
+                delete playerPositions[name];
+                localStorage.setItem('players_v5', JSON.stringify(players));
+                localStorage.setItem('player_positions_v1', JSON.stringify(playerPositions));
+                renderList();
+            }
+        }
         function clearPitch() { if(confirm('Saha temizlensin mi?')) document.querySelectorAll('.player-token').forEach(e=>e.remove()); }
 
         function spawn(name, team, selectId) {
