--- a/index.html
+++ b/index.html
@@ -281,8 +281,7 @@
         }
 
         /* REKLAMLAR */
-        #ad-sidebar-desktop { width: var(--ad-sidebar-width); background: #f0f2f5; border-left: 1px solid #ddd; display: flex; align-items: center; justify-content: center; flex-shrink: 0; padding: 10px; }
-        #ad-banner-mobile { display: none; position: fixed; bottom: 0; left: 0; right: 0; height: var(--mobile-ad-height); background: #fff; border-top: 1px solid #ddd; z-index: 999; align-items: center; justify-content: center; }
+        .ad-bottom { width: 100%; display: flex; justify-content: center; align-items: center; margin-top: 16px; }
         #adsterra-slot { width: 100%; display: flex; align-items: center; justify-content: center; }
 
         .modal { display: none; position: fixed; z-index: 10000; inset: 0; background-color: rgba(0,0,0,0.5); align-items: center; justify-content: center; }
@@ -315,9 +314,6 @@
                 aspect-ratio: 2/3; /* Oranı Koru */
                 margin: 0 auto;
             }
-            
-            #ad-sidebar-desktop { display: none; }
-            #ad-banner-mobile { display: flex; }
             
             .jersey { font-size: 12px; }
             .player-token { width: 45px; height: 45px; }
@@ -402,33 +398,17 @@
 
             <div class="content-section">
                 <h3>Halı Saha Kadro Hazırlama Rehberi</h3>
-                <p>
-                    Kadrohazirla.com ile halı saha takımınızı hızlıca düzenleyebilir, oyuncuları sahaya yerleştirip
-                    görsel kadro paylaşımı yapabilirsiniz. Bu sayfa, takım organizasyonunu kolaylaştırmak için tasarlanmış
-                    ücretsiz bir araçtır ve tüm veriler tarayıcınızda saklanır.
-                </p>
-                <p>
-                    Kadro oluştururken oyuncu havuzuna isim ekleyin, pozisyon seçin ve A/B takımlarına sürükleyin.
-                    Saha çizgileri ve ızgara ile oyuncu yerleşimi daha düzenli görünür.
-                </p>
-                <ul>
-                    <li>Takım isimleri ve forma renklerini özelleştirin.</li>
-                    <li>Oyuncu pozisyonlarını saklayarak hızlı tekrar kullanım sağlayın.</li>
-                    <li>Oluşturduğunuz dizilişi JPG olarak kaydedip paylaşın.</li>
-                </ul>
+                <p>Tahtanın altındaki detaylı bilgilendirmeler ayrı sayfaya taşındı.</p>
+                <p><a href="info.html">Detaylı rehber ve kullanım bilgileri için tıklayın.</a></p>
+            </div>
+
+            <div class="ad-bottom">
+                <div id="adsterra-slot">
+                    <script async="async" data-cfasync="false" src="https://pl28386641.effectivegatecpm.com/bae3fb0f8d0456d3a275b7eb4fc6606d/invoke.js"></script>
+                    <div id="container-bae3fb0f8d0456d3a275b7eb4fc6606d"></div>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div id="ad-sidebar-desktop">
-    </div>
-
-    <div id="ad-banner-mobile">
-    </div>
-
-    <div id="adsterra-slot">
-        <script async="async" data-cfasync="false" src="https://pl28386641.effectivegatecpm.com/bae3fb0f8d0456d3a275b7eb4fc6606d/invoke.js"></script>
-        <div id="container-bae3fb0f8d0456d3a275b7eb4fc6606d"></div>
     </div>
 
     <div id="privacyModal" class="modal">
@@ -453,7 +433,7 @@
         const pitchContainer = document.getElementById('pitch-container');
         const gridOverlay = document.getElementById('gridOverlay');
 
-        window.onload = () => { renderList(); setupInteract(); setupListeners(); updateStyles(); updateTokenSize(); positionAd(); };
+        window.onload = () => { renderList(); setupInteract(); setupListeners(); updateStyles(); updateTokenSize(); };
 
         // Mobil Sidebar Toggle
         function toggleSidebar() {
@@ -510,22 +490,6 @@
         }
 
         window.addEventListener('resize', updateTokenSize);
-        window.addEventListener('resize', positionAd);
-
-        function positionAd() {
-            const slot = document.getElementById('adsterra-slot');
-            const desktop = document.getElementById('ad-sidebar-desktop');
-            const mobile = document.getElementById('ad-banner-mobile');
-            if (!slot || !desktop || !mobile) return;
-            if (window.matchMedia('(max-width: 900px)').matches) {
-                if (mobile.contains(slot)) return;
-                mobile.appendChild(slot);
-            } else {
-                if (desktop.contains(slot)) return;
-                desktop.appendChild(slot);
-            }
-        }
-
         function changePitchStyle(e) {
             const r = document.documentElement.style;
             if(e.target.value === 'classic') { 
@@ -595,6 +559,19 @@
         }
         function clearPitch() { if(confirm('Saha temizlensin mi?')) document.querySelectorAll('.player-token').forEach(e=>e.remove()); }
 
+        function attachTokenRemoval(el) {
+            let lastTap = 0;
+            el.addEventListener('dblclick', () => el.remove());
+            el.addEventListener('touchend', (event) => {
+                const now = Date.now();
+                if (now - lastTap < 300) {
+                    event.preventDefault();
+                    el.remove();
+                }
+                lastTap = now;
+            });
+        }
+
         function spawn(name, team, selectId) {
             const pos = document.getElementById(selectId).value;
             const el = document.createElement('div');
@@ -608,7 +585,7 @@
             const y = team==='team-a' ? h*0.2 : h*0.7;
             el.style.transform = `translate(${x}px, ${y}px)`;
             el.setAttribute('data-x', x); el.setAttribute('data-y', y);
-            el.ondblclick = function(){ this.remove() };
+            attachTokenRemoval(el);
             pitchContainer.appendChild(el);
         }
 
